@@ -137,7 +137,8 @@ def get_tv_files(called_from_tv_menu, progress, done):
     for tv_show in tv_shows:
         show_id = tv_show['tvshowid']
         show_name = tv_show['label']
-        progress.update(done, __language__(30209).encode('utf-8') + show_name.encode('utf-8')) 
+        displaystring = __language__(30209) + show_name
+        progress.update(done, displaystring.encode('utf-8')) 
 
         episode_result = eval(xbmc.executeJSONRPC('{"jsonrpc": "2.0", "method": "VideoLibrary.GetEpisodes", "params": {"tvshowid": %d, "properties": ["file"]}, "id": 1}' % show_id))
 
@@ -146,7 +147,8 @@ def get_tv_files(called_from_tv_menu, progress, done):
             files.extend([ clean_path(e['file']) for e in episodes ])
         except KeyError:
             if called_from_tv_menu and __scriptdebug__:
-                xbmcgui.Dialog().ok(__language__(30203), __language__(30207) + show_name, __language__(30204))
+                displaystring = __language__(30209) + show_name
+                xbmcgui.Dialog().ok(__language__(30203), displaystring.encode('utf-8'), __language__(30204))
 
     return files
 
@@ -191,7 +193,8 @@ def get_files(path, progress, done):
     path = path.replace("\\", "/")
     results = []
     
-    progress.update(done, __language__(30210) + str(__dircount__) + __language__(30211) + str(__filecount__) + __language__(30212), __language__(30213).encode('utf-8') + path.encode('utf-8'))
+    displaypath = __language__(30213) + path
+    progress.update(done, __language__(30210) + str(__dircount__) + __language__(30211) + str(__filecount__) + __language__(30212), displaypath.encode('utf-8'))
 
     #for some reason xbmc throws an exception when doing GetDirectory on an empty source directory. it works when one file is in there. so catch that
     try:
@@ -209,7 +212,7 @@ def get_files(path, progress, done):
                 __filecount__ += 1
                 results.append(f)
 
-            progress.update(done, __language__(30210) + str(__dircount__) + __language__(30211) + str(__filecount__) + __language__(30212), __language__(30213).encode('utf-8') + path.encode('utf-8'))
+            progress.update(done, __language__(30210) + str(__dircount__) + __language__(30211) + str(__filecount__) + __language__(30212), displaypath.encode('utf-8'))
 
     return results
 
