@@ -1,3 +1,5 @@
+[B]2.2.2[/B]
+- Fixed: Attempt to fix the Unicode problem in the TV progress dialog
 [B]2.2.1[/B]
 - Fixed: Unicode problem in the progress dialogs
 [B]2.2.0[/B]
